--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-ui",
   "version": "0.0.1",
   "description": "Vue-UI",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,15 @@
   },
   "homepage": "https://github.com/yanjian2323/VUE-UI#readme",
   "dependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-hot-reload-api": "^2.3.1"
+  },
+  "devDependencies": {
+    "@vue/component-compiler-utils": "^2.3.0",
+    "parcel-bundler": "^1.10.3",
+    "vue-template-compiler": "^2.5.17"
+  },
+  "alias": {
+    "vue": "./mode_modules/vue/dist/vue.common.js"
   }
 }
