--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.3.0",
     "parcel-bundler": "^1.10.3",
+    "sass": "^1.15.1",
     "vue-template-compiler": "^2.5.17"
   },
   "alias": {
-    "vue": "./mode_modules/vue/dist/vue.common.js"
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
