--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Vue-UI",
   "main": "app.js",
   "scripts": {
-    "dev-test": "parcel watch test/* --no-cache && karma start",
+    "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-minify --no-cache && karma start --single-run"
   },
   "repository": {
