--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-ui",
+  "name": "yanjian-vue-ui",
   "version": "0.0.1",
   "description": "Vue-UI",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-minify --no-cache && karma start --single-run"
