--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "yanjian-vue-ui",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Vue-UI",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-minify --no-cache && karma start --single-run"
